feat: 讀取google excel爛笑話

--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.5",
+    "@google-cloud/local-auth": "^2.1.0",
     "@pearwb/logger": "^0.3.4",
     "@twurple/api": "^7.0.7",
     "@twurple/auth": "^7.0.7",
     "@twurple/chat": "^7.0.7",
-    "@twurple/pubsub": "^7.0.7"
+    "@twurple/pubsub": "^7.0.7",
+    "googleapis": "^105.0.0"
   }
 }
