--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build.compile": "babel src --out-dir dist -x .js,.ts --ignore **/*.d.ts,**/*.test.js,**/*.test.ts,**/__tests__ --delete-dir-on-start",
     "build.types": "tsc --project tsconfig.types.json && tsconfig-replace-paths -p tsconfig.types.json -s ./src -o ./dist",
     "test": "lint-staged && jest --passWithNoTests",
-    "prepare": "node prepare.js"
+    "prepare": "husky"
   },
   "keywords": [],
   "author": {
@@ -19,36 +19,37 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.24.1",
-    "@babel/core": "^7.24.3",
-    "@babel/node": "^7.23.9",
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.0",
+    "@babel/node": "^7.26.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.24.1",
-    "@babel/plugin-transform-runtime": "^7.24.3",
-    "@babel/preset-env": "^7.24.3",
-    "@babel/preset-typescript": "^7.24.1",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
+    "@babel/plugin-transform-runtime": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/glob": "^8.1.0",
     "babel-plugin-root-import": "^6.6.0",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
     "tsconfig-replace-paths": "^0.0.14",
-    "typescript": "^5.4.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.24.1",
+    "@babel/runtime": "^7.26.0",
     "@google-cloud/local-auth": "^3.0.1",
-    "@pearwb/logger": "^0.3.4",
-    "@twurple/api": "^7.1.0",
-    "@twurple/auth": "^7.1.0",
-    "@twurple/chat": "^7.1.0",
-    "@twurple/pubsub": "^7.1.0",
-    "googleapis": "^134.0.0"
+    "@pearwb/logger": "^0.4.0",
+    "@twurple/api": "^7.2.0",
+    "@twurple/auth": "^7.2.0",
+    "@twurple/chat": "^7.2.0",
+    "@twurple/pubsub": "^7.2.0",
+    "googleapis": "^144.0.0"
   }
 }
