--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
   "compilerOptions": {
+    "target": "es2017",
+    "moduleResolution": "node",
     "allowJs": true,
     "baseUrl": ".",
     "downlevelIteration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "outDir": "dist",
     "paths": {
       "~/*": ["./src/*"],
       "!/*": ["./*"]
     }
   },
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules", "eslint.config.mjs"]
 }
