--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "strict": true,
     "outDir": "dist",
     "paths": {
       "~/*": ["./src/*"],
